# programacao-2-IFSC

./: CMakeLists.txt  LICENSE  main.c  ola.txt  ponteiro.c  ponteiro2.c
NewProjectCMake/: CMakeLists.txt
exercicios/: RecursividadeFibonacci.c  lista_linear.c  lista_linear.h  recursividadeFactorial.c
